--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
@@ -106,4 +107,4 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
-}
+  }
